--- a/QiHuangDJ/QiHuangDJ/ViewController.xib
+++ b/QiHuangDJ/QiHuangDJ/ViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
@@ -11,62 +11,157 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="44" width="320" height="524"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKI-Zs-yps">
-                    <rect key="frame" x="212" y="155" width="74" height="30"/>
-                    <state key="normal" title="直播">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SjN-OH-bcf">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="P5p-bp-nmj"/>
+                    </constraints>
+                </scrollView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKI-Zs-yps">
+                    <rect key="frame" x="210" y="100" width="110" height="85"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="uTD-6i-ESM"/>
+                    </constraints>
+                    <state key="normal" title="直播" image="shouye_icon1.png" backgroundImage="shouye_bg1.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="zhibo:" destination="-1" eventType="touchUpInside" id="LI6-Ox-IGX"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x6d-LO-7XK">
-                    <rect key="frame" x="212" y="216" width="74" height="30"/>
-                    <state key="normal" title="七煌艺人">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x6d-LO-7XK">
+                    <rect key="frame" x="210" y="185" width="110" height="85"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="AIX-LR-zan"/>
+                    </constraints>
+                    <state key="normal" title="七煌艺人" image="shouye_icon2.png" backgroundImage="shouye_bg2.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="qihuangyiren:" destination="-1" eventType="touchUpInside" id="ZGm-gE-9bO"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VV-Ro-o7w">
-                    <rect key="frame" x="212" y="282" width="74" height="36"/>
-                    <state key="normal" title="英雄联盟">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VV-Ro-o7w">
+                    <rect key="frame" x="210" y="270" width="110" height="85"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="uOs-Ow-GxN"/>
+                    </constraints>
+                    <state key="normal" title="炉石传说" image="shouye_icon3.png" backgroundImage="shouye_bg3.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="LOL:" destination="-1" eventType="touchUpInside" id="I3K-wb-hAu"/>
+                        <action selector="LSchuanshuo:" destination="-1" eventType="touchUpInside" id="t1C-oh-FEg"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6J-Kn-ueM">
-                    <rect key="frame" x="212" y="357" width="74" height="30"/>
-                    <state key="normal" title="炉石传说">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6J-Kn-ueM">
+                    <rect key="frame" x="210" y="355" width="110" height="85"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="Pvc-wC-4VL"/>
+                    </constraints>
+                    <state key="normal" title="英雄联盟" image="shouye_icon4.png" backgroundImage="shouye_bg4.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="LSchuanshuo:" destination="-1" eventType="touchUpInside" id="hOk-jk-WS0"/>
+                        <action selector="LOL:" destination="-1" eventType="touchUpInside" id="ggL-28-pLr"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uz6-g4-Gns">
-                    <rect key="frame" x="212" y="417" width="74" height="30"/>
-                    <state key="normal" title="dota2">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uz6-g4-Gns">
+                    <rect key="frame" x="210" y="440" width="110" height="85"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="tfV-b8-lSk"/>
+                    </constraints>
+                    <state key="normal" title="dota2" image="shouye_icon5.png" backgroundImage="shouye_bg5.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="dota2:" destination="-1" eventType="touchUpInside" id="BBL-Kx-KEo"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bunnytest" translatesAutoresizingMaskIntoConstraints="NO" id="Sjr-FT-pIw">
+                    <rect key="frame" x="0.0" y="100" width="210" height="85"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bunnytest" translatesAutoresizingMaskIntoConstraints="NO" id="ch3-tj-caD">
+                    <rect key="frame" x="0.0" y="185" width="210" height="85"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bunnytest" translatesAutoresizingMaskIntoConstraints="NO" id="ffO-jW-5Sv">
+                    <rect key="frame" x="0.0" y="270" width="210" height="85"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bunnytest" translatesAutoresizingMaskIntoConstraints="NO" id="DHn-6T-3Sh">
+                    <rect key="frame" x="0.0" y="355" width="210" height="85"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bunnytest" translatesAutoresizingMaskIntoConstraints="NO" id="Q68-jv-pSJ">
+                    <rect key="frame" x="0.0" y="440" width="210" height="85"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="419" y="345"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="8VV-Ro-o7w" firstAttribute="leading" secondItem="ffO-jW-5Sv" secondAttribute="trailing" id="1Kl-eS-d2a"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="top" secondItem="ch3-tj-caD" secondAttribute="bottom" id="2ed-sv-Moi"/>
+                <constraint firstItem="DHn-6T-3Sh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="2fx-Zc-oVF"/>
+                <constraint firstAttribute="trailing" secondItem="uz6-g4-Gns" secondAttribute="trailing" id="3eM-pc-dZU"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="DHn-6T-3Sh" secondAttribute="height" id="4Mq-vC-1DE"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="9UP-zK-nsO"/>
+                <constraint firstItem="K6J-Kn-ueM" firstAttribute="leading" secondItem="DHn-6T-3Sh" secondAttribute="trailing" id="Aux-gp-5Kx"/>
+                <constraint firstItem="Q68-jv-pSJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="CCz-dO-Pel"/>
+                <constraint firstAttribute="trailing" secondItem="8VV-Ro-o7w" secondAttribute="trailing" id="Dn8-yk-yu9"/>
+                <constraint firstItem="uz6-g4-Gns" firstAttribute="leading" secondItem="Q68-jv-pSJ" secondAttribute="trailing" id="EHZ-zU-GOb"/>
+                <constraint firstItem="uz6-g4-Gns" firstAttribute="top" secondItem="K6J-Kn-ueM" secondAttribute="bottom" id="F9A-cr-OM9"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="ch3-tj-caD" secondAttribute="height" id="KuI-XA-Ntm"/>
+                <constraint firstItem="DHn-6T-3Sh" firstAttribute="top" secondItem="ffO-jW-5Sv" secondAttribute="bottom" id="LLF-cm-u7u"/>
+                <constraint firstAttribute="trailing" secondItem="x6d-LO-7XK" secondAttribute="trailing" id="PSc-Db-Pgk"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="Q68-jv-pSJ" secondAttribute="height" id="Q8a-YB-oHz"/>
+                <constraint firstItem="x6d-LO-7XK" firstAttribute="height" secondItem="K6J-Kn-ueM" secondAttribute="height" id="Qlg-3t-8n6"/>
+                <constraint firstAttribute="trailing" secondItem="SjN-OH-bcf" secondAttribute="trailing" id="RCh-sb-ns1"/>
+                <constraint firstAttribute="trailing" secondItem="yKI-Zs-yps" secondAttribute="trailing" id="Ssw-4d-A6o"/>
+                <constraint firstItem="8VV-Ro-o7w" firstAttribute="top" secondItem="x6d-LO-7XK" secondAttribute="bottom" id="aUy-XJ-Xpn"/>
+                <constraint firstItem="Sjr-FT-pIw" firstAttribute="top" secondItem="SjN-OH-bcf" secondAttribute="bottom" id="c90-Q0-4Mg"/>
+                <constraint firstItem="ch3-tj-caD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="d6C-Jl-A3K"/>
+                <constraint firstAttribute="trailing" secondItem="K6J-Kn-ueM" secondAttribute="trailing" id="eHS-k8-fit"/>
+                <constraint firstItem="SjN-OH-bcf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ePl-oP-mf5"/>
+                <constraint firstAttribute="bottom" secondItem="Q68-jv-pSJ" secondAttribute="bottom" id="f5s-t1-87z"/>
+                <constraint firstItem="x6d-LO-7XK" firstAttribute="height" secondItem="yKI-Zs-yps" secondAttribute="height" id="feg-sq-qIj"/>
+                <constraint firstItem="x6d-LO-7XK" firstAttribute="height" secondItem="uz6-g4-Gns" secondAttribute="height" id="frT-SD-1k8"/>
+                <constraint firstAttribute="bottom" secondItem="uz6-g4-Gns" secondAttribute="bottom" id="fuo-6c-OAF"/>
+                <constraint firstItem="ch3-tj-caD" firstAttribute="top" secondItem="Sjr-FT-pIw" secondAttribute="bottom" id="gRA-Cu-SeW"/>
+                <constraint firstItem="yKI-Zs-yps" firstAttribute="leading" secondItem="Sjr-FT-pIw" secondAttribute="trailing" id="goA-D5-iWi"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="Q68-jv-pSJ" secondAttribute="height" id="gzU-LX-eAI"/>
+                <constraint firstItem="SjN-OH-bcf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="i7j-kd-AhE"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="Sjr-FT-pIw" secondAttribute="height" id="itt-4o-W6O"/>
+                <constraint firstItem="K6J-Kn-ueM" firstAttribute="top" secondItem="8VV-Ro-o7w" secondAttribute="bottom" id="jnt-Q9-S2c"/>
+                <constraint firstItem="x6d-LO-7XK" firstAttribute="leading" secondItem="ch3-tj-caD" secondAttribute="trailing" id="mMh-A8-nEo"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="Sjr-FT-pIw" secondAttribute="height" id="miD-W5-fvT"/>
+                <constraint firstItem="x6d-LO-7XK" firstAttribute="top" secondItem="yKI-Zs-yps" secondAttribute="bottom" id="nVb-BS-q6X"/>
+                <constraint firstItem="x6d-LO-7XK" firstAttribute="height" secondItem="8VV-Ro-o7w" secondAttribute="height" id="oyD-5Y-DB9"/>
+                <constraint firstItem="yKI-Zs-yps" firstAttribute="top" secondItem="SjN-OH-bcf" secondAttribute="bottom" id="p6h-Ju-ISb"/>
+                <constraint firstItem="Q68-jv-pSJ" firstAttribute="top" secondItem="DHn-6T-3Sh" secondAttribute="bottom" id="rjc-O7-7vK"/>
+                <constraint firstItem="Sjr-FT-pIw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uMR-ey-4eS"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="ch3-tj-caD" secondAttribute="height" id="vcD-lA-lI0"/>
+                <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="DHn-6T-3Sh" secondAttribute="height" id="xrR-fT-AGX"/>
+            </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
+    <resources>
+        <image name="bunnytest" width="700" height="816"/>
+        <image name="shouye_bg1.png" width="111" height="81"/>
+        <image name="shouye_bg2.png" width="111" height="81"/>
+        <image name="shouye_bg3.png" width="111" height="81"/>
+        <image name="shouye_bg4.png" width="111" height="81"/>
+        <image name="shouye_bg5.png" width="111" height="81"/>
+        <image name="shouye_icon1.png" width="35" height="19"/>
+        <image name="shouye_icon2.png" width="46" height="28"/>
+        <image name="shouye_icon3.png" width="34" height="34"/>
+        <image name="shouye_icon4.png" width="34" height="34"/>
+        <image name="shouye_icon5.png" width="36" height="43"/>
+    </resources>
 </document>
