personal information view controller update - unlogged user page

--- a/QiHuangDJ/VIewController/PersonCenter/PersonCenterViewController.xib
+++ b/QiHuangDJ/VIewController/PersonCenter/PersonCenterViewController.xib
@@ -1,28 +1,126 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PersonCenterViewController">
             <connections>
+                <outlet property="buttonHolder" destination="evP-Xb-7UQ" id="t5E-mW-nd5"/>
+                <outlet property="contentHolder" destination="mPY-6t-wCp" id="ezK-Sh-BtZ"/>
+                <outlet property="nicknameLabel" destination="LCF-fL-mxE" id="6De-al-2m8"/>
+                <outlet property="pageHolder" destination="muu-9I-T2S" id="xRy-a4-ZFy"/>
+                <outlet property="thumbHolder" destination="AIS-Zd-fKA" id="tbE-iB-YWI"/>
+                <outlet property="thumbImageView" destination="BnL-6U-KVy" id="Umc-B6-mmF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="个人中心" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Od-a2-ecb">
-                    <rect key="frame" x="118" y="255" width="68" height="21"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rkd-Ur-nQX">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="3vM-qw-yoE"/>
+                    </constraints>
+                </view>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="muu-9I-T2S">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AIS-Zd-fKA">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BnL-6U-KVy">
+                                    <rect key="frame" x="110" y="32" width="100" height="100"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="100" id="WM7-xw-14Q"/>
+                                        <constraint firstAttribute="height" constant="100" id="hFg-YA-OPG"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="图图图图图图图" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCF-fL-mxE">
+                                    <rect key="frame" x="20" y="152" width="280" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="centerX" secondItem="BnL-6U-KVy" secondAttribute="centerX" id="5AI-Bd-Qco"/>
+                                <constraint firstItem="BnL-6U-KVy" firstAttribute="top" secondItem="AIS-Zd-fKA" secondAttribute="top" constant="32" id="7fr-vG-is8"/>
+                                <constraint firstItem="LCF-fL-mxE" firstAttribute="top" secondItem="BnL-6U-KVy" secondAttribute="bottom" constant="20" id="XHx-5f-D4T"/>
+                                <constraint firstAttribute="height" constant="200" id="Zbb-tu-5Ko"/>
+                                <constraint firstAttribute="trailing" secondItem="LCF-fL-mxE" secondAttribute="trailing" constant="20" id="akO-Zn-s4W"/>
+                                <constraint firstItem="LCF-fL-mxE" firstAttribute="leading" secondItem="AIS-Zd-fKA" secondAttribute="leading" constant="20" id="w5M-nm-P1z"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="evP-Xb-7UQ">
+                            <rect key="frame" x="0.0" y="200" width="320" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KBM-Sm-fcb">
+                                    <rect key="frame" x="0.0" y="0.0" width="160" height="40"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="我的收藏">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNu-Mb-ulp">
+                                    <rect key="frame" x="160" y="0.0" width="160" height="40"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="我的订阅">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="kNu-Mb-ulp" secondAttribute="trailing" id="0e9-ab-W4L"/>
+                                <constraint firstItem="kNu-Mb-ulp" firstAttribute="leading" secondItem="KBM-Sm-fcb" secondAttribute="trailing" id="7PN-vf-qVP"/>
+                                <constraint firstAttribute="bottom" secondItem="KBM-Sm-fcb" secondAttribute="bottom" id="DS2-gO-M4w"/>
+                                <constraint firstItem="KBM-Sm-fcb" firstAttribute="width" secondItem="kNu-Mb-ulp" secondAttribute="width" id="Fmx-4o-p6N"/>
+                                <constraint firstItem="KBM-Sm-fcb" firstAttribute="leading" secondItem="evP-Xb-7UQ" secondAttribute="leading" id="Uyt-PM-Kob"/>
+                                <constraint firstItem="KBM-Sm-fcb" firstAttribute="top" secondItem="evP-Xb-7UQ" secondAttribute="top" id="VxK-qJ-Enh"/>
+                                <constraint firstItem="kNu-Mb-ulp" firstAttribute="top" secondItem="evP-Xb-7UQ" secondAttribute="top" id="cy7-Ie-CdE"/>
+                                <constraint firstAttribute="height" constant="40" id="erA-LK-N5h"/>
+                                <constraint firstAttribute="bottom" secondItem="kNu-Mb-ulp" secondAttribute="bottom" id="z13-dR-kDI"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mPY-6t-wCp">
+                            <rect key="frame" x="0.0" y="240" width="320" height="264"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="AIS-Zd-fKA" firstAttribute="leading" secondItem="muu-9I-T2S" secondAttribute="leading" id="14U-Fy-j7k"/>
+                        <constraint firstItem="AIS-Zd-fKA" firstAttribute="top" secondItem="muu-9I-T2S" secondAttribute="top" id="a5S-Sq-t8a"/>
+                        <constraint firstItem="evP-Xb-7UQ" firstAttribute="leading" secondItem="muu-9I-T2S" secondAttribute="leading" id="az3-HN-crS"/>
+                        <constraint firstItem="evP-Xb-7UQ" firstAttribute="top" secondItem="AIS-Zd-fKA" secondAttribute="bottom" id="bPb-8C-XR4"/>
+                        <constraint firstAttribute="trailing" secondItem="evP-Xb-7UQ" secondAttribute="trailing" id="gVn-N7-c41"/>
+                        <constraint firstAttribute="trailing" secondItem="AIS-Zd-fKA" secondAttribute="trailing" id="v9v-zi-cxo"/>
+                    </constraints>
+                </scrollView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="rkd-Ur-nQX" secondAttribute="trailing" id="3d4-HT-vRP"/>
+                <constraint firstItem="muu-9I-T2S" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="5KC-gQ-AYe"/>
+                <constraint firstItem="rkd-Ur-nQX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Lxg-Ag-5KX"/>
+                <constraint firstItem="rkd-Ur-nQX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Mze-38-UfV"/>
+                <constraint firstItem="muu-9I-T2S" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fbY-Lc-wqQ"/>
+                <constraint firstItem="AIS-Zd-fKA" firstAttribute="width" secondItem="rkd-Ur-nQX" secondAttribute="width" id="i23-Do-lvr"/>
+                <constraint firstAttribute="bottom" secondItem="muu-9I-T2S" secondAttribute="bottom" id="mO2-Ze-YKx"/>
+                <constraint firstAttribute="trailing" secondItem="muu-9I-T2S" secondAttribute="trailing" id="tjh-Xy-1ID"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
